# serializer version: 1
# name: test_forecast_service[get_forecast]
  dict({
    'forecast': list([
      dict({
        'apparent_temperature': 29.8,
        'cloud_coverage': 58,
        'condition': 'lightning-rainy',
        'datetime': '2020-07-26T05:00:00+00:00',
        'precipitation': 2.5,
        'precipitation_probability': 60,
        'temperature': 29.5,
        'templow': 15.4,
        'uv_index': 5,
        'wind_bearing': 166,
        'wind_gust_speed': 29.6,
        'wind_speed': 13.0,
      }),
      dict({
        'apparent_temperature': 28.9,
        'cloud_coverage': 52,
        'condition': 'partlycloudy',
        'datetime': '2020-07-27T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 25,
        'temperature': 26.2,
        'templow': 15.9,
        'uv_index': 7,
        'wind_bearing': 297,
        'wind_gust_speed': 14.8,
        'wind_speed': 9.3,
      }),
      dict({
        'apparent_temperature': 31.6,
        'cloud_coverage': 65,
        'condition': 'partlycloudy',
        'datetime': '2020-07-28T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 10,
        'temperature': 31.7,
        'templow': 16.8,
        'uv_index': 7,
        'wind_bearing': 198,
        'wind_gust_speed': 24.1,
        'wind_speed': 16.7,
      }),
      dict({
        'apparent_temperature': 26.5,
        'cloud_coverage': 45,
        'condition': 'partlycloudy',
        'datetime': '2020-07-29T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 9,
        'temperature': 24.0,
        'templow': 11.7,
        'uv_index': 6,
        'wind_bearing': 293,
        'wind_gust_speed': 24.1,
        'wind_speed': 13.0,
      }),
      dict({
        'apparent_temperature': 22.2,
        'cloud_coverage': 50,
        'condition': 'partlycloudy',
        'datetime': '2020-07-30T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 1,
        'temperature': 21.4,
        'templow': 12.2,
        'uv_index': 7,
        'wind_bearing': 280,
        'wind_gust_speed': 27.8,
        'wind_speed': 18.5,
      }),
    ]),
  })
# ---
# name: test_forecast_service[get_forecasts]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 29.8,
          'cloud_coverage': 58,
          'condition': 'lightning-rainy',
          'datetime': '2020-07-26T05:00:00+00:00',
          'precipitation': 2.5,
          'precipitation_probability': 60,
          'temperature': 29.5,
          'templow': 15.4,
          'uv_index': 5,
          'wind_bearing': 166,
          'wind_gust_speed': 29.6,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 28.9,
          'cloud_coverage': 52,
          'condition': 'partlycloudy',
          'datetime': '2020-07-27T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 25,
          'temperature': 26.2,
          'templow': 15.9,
          'uv_index': 7,
          'wind_bearing': 297,
          'wind_gust_speed': 14.8,
          'wind_speed': 9.3,
        }),
        dict({
          'apparent_temperature': 31.6,
          'cloud_coverage': 65,
          'condition': 'partlycloudy',
          'datetime': '2020-07-28T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 31.7,
          'templow': 16.8,
          'uv_index': 7,
          'wind_bearing': 198,
          'wind_gust_speed': 24.1,
          'wind_speed': 16.7,
        }),
        dict({
          'apparent_temperature': 26.5,
          'cloud_coverage': 45,
          'condition': 'partlycloudy',
          'datetime': '2020-07-29T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 9,
          'temperature': 24.0,
          'templow': 11.7,
          'uv_index': 6,
          'wind_bearing': 293,
          'wind_gust_speed': 24.1,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 22.2,
          'cloud_coverage': 50,
          'condition': 'partlycloudy',
          'datetime': '2020-07-30T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'temperature': 21.4,
          'templow': 12.2,
          'uv_index': 7,
          'wind_bearing': 280,
          'wind_gust_speed': 27.8,
          'wind_speed': 18.5,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_subscription
  list([
    dict({
      'apparent_temperature': 29.8,
      'cloud_coverage': 58,
      'condition': 'lightning-rainy',
      'datetime': '2020-07-26T05:00:00+00:00',
      'precipitation': 2.5,
      'precipitation_probability': 60,
      'temperature': 29.5,
      'templow': 15.4,
      'uv_index': 5,
      'wind_bearing': 166,
      'wind_gust_speed': 29.6,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 28.9,
      'cloud_coverage': 52,
      'condition': 'partlycloudy',
      'datetime': '2020-07-27T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 26.2,
      'templow': 15.9,
      'uv_index': 7,
      'wind_bearing': 297,
      'wind_gust_speed': 14.8,
      'wind_speed': 9.3,
    }),
    dict({
      'apparent_temperature': 31.6,
      'cloud_coverage': 65,
      'condition': 'partlycloudy',
      'datetime': '2020-07-28T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 31.7,
      'templow': 16.8,
      'uv_index': 7,
      'wind_bearing': 198,
      'wind_gust_speed': 24.1,
      'wind_speed': 16.7,
    }),
    dict({
      'apparent_temperature': 26.5,
      'cloud_coverage': 45,
      'condition': 'partlycloudy',
      'datetime': '2020-07-29T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 9,
      'temperature': 24.0,
      'templow': 11.7,
      'uv_index': 6,
      'wind_bearing': 293,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 22.2,
      'cloud_coverage': 50,
      'condition': 'partlycloudy',
      'datetime': '2020-07-30T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'temperature': 21.4,
      'templow': 12.2,
      'uv_index': 7,
      'wind_bearing': 280,
      'wind_gust_speed': 27.8,
      'wind_speed': 18.5,
    }),
  ])
# ---
# name: test_forecast_subscription.1
  list([
    dict({
      'apparent_temperature': 29.8,
      'cloud_coverage': 58,
      'condition': 'lightning-rainy',
      'datetime': '2020-07-26T05:00:00+00:00',
      'precipitation': 2.5,
      'precipitation_probability': 60,
      'temperature': 29.5,
      'templow': 15.4,
      'uv_index': 5,
      'wind_bearing': 166,
      'wind_gust_speed': 29.6,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 28.9,
      'cloud_coverage': 52,
      'condition': 'partlycloudy',
      'datetime': '2020-07-27T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 26.2,
      'templow': 15.9,
      'uv_index': 7,
      'wind_bearing': 297,
      'wind_gust_speed': 14.8,
      'wind_speed': 9.3,
    }),
    dict({
      'apparent_temperature': 31.6,
      'cloud_coverage': 65,
      'condition': 'partlycloudy',
      'datetime': '2020-07-28T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 31.7,
      'templow': 16.8,
      'uv_index': 7,
      'wind_bearing': 198,
      'wind_gust_speed': 24.1,
      'wind_speed': 16.7,
    }),
    dict({
      'apparent_temperature': 26.5,
      'cloud_coverage': 45,
      'condition': 'partlycloudy',
      'datetime': '2020-07-29T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 9,
      'temperature': 24.0,
      'templow': 11.7,
      'uv_index': 6,
      'wind_bearing': 293,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 22.2,
      'cloud_coverage': 50,
      'condition': 'partlycloudy',
      'datetime': '2020-07-30T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'temperature': 21.4,
      'templow': 12.2,
      'uv_index': 7,
      'wind_bearing': 280,
      'wind_gust_speed': 27.8,
      'wind_speed': 18.5,
    }),
  ])
# ---
# name: test_weather[weather.home-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.home',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'accuweather',
    'previous_unique_id': None,
    'supported_features': <WeatherEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '0123456',
    'unit_of_measurement': None,
  })
# ---
# name: test_weather[weather.home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'apparent_temperature': 22.8,
      'attribution': 'Data provided by AccuWeather',
      'cloud_coverage': 10,
      'dew_point': 16.2,
      'friendly_name': 'Home',
      'humidity': 67,
      'precipitation_unit': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      'pressure': 1012.0,
      'pressure_unit': <UnitOfPressure.HPA: 'hPa'>,
      'supported_features': <WeatherEntityFeature: 1>,
      'temperature': 22.6,
      'temperature_unit': <UnitOfTemperature.CELSIUS: '°C'>,
      'uv_index': 6,
      'visibility': 16.1,
      'visibility_unit': <UnitOfLength.KILOMETERS: 'km'>,
      'wind_bearing': 180,
      'wind_gust_speed': 20.3,
      'wind_speed': 14.5,
      'wind_speed_unit': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'sunny',
  })
# ---
